--- a/css/BookNow_Page.css
+++ b/css/BookNow_Page.css
@@ -1,8 +1,18 @@
-<div class="container">
-<img src="img/fbbanner.jpg" alt="Image not working :/" width="100%">
-  <div class="bottom-left">Bottom Left</div>
-  <div class="top-left">Top Left</div>
-  <div class="top-right">Top Right</div>
-  <div class="bottom-right">Bottom Right</div>
-  <div class="centered">Centered</div>
-</div>
+/* Container holding the image and the text */
+.container {
+    position: relative;
+    text-align: center;
+    color: black;
+  }
+  /* Centered text */
+  .centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .class_name { 
+    display: flex;
+    align-items:center;
+}
