--- a/css/head-and-foot.css
+++ b/css/head-and-foot.css
@@ -7,7 +7,7 @@ body{
 
 nav {
     overflow:hidden;
-    box-shadow: 0px 4px 5px 0px #000000 25%;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
     border-bottom: 4px solid #ABABAB;
     width:100%;
     position:absolute;
@@ -125,3 +125,25 @@ footer {
     margin-top:5px;
 }
 
+/***************** footer-2 ******************/
+
+#beginProject {
+    height:300px;
+    background:lightgrey;
+    margin-top:150px;
+    text-align:center;
+    padding-top:100px;
+}
+
+#beginProject button{
+    background:black;
+    color:white;
+    border:none;
+    padding:10px;
+}
+
+#beginProject button:hover{
+    background:grey;
+    color:white;
+    cursor:pointer;
+}
