--- a/css/BookNow_Page.css
+++ b/css/BookNow_Page.css
@@ -1,36 +1,87 @@
 #top{
-    position: absolute;
-    width: 1441px;
-    height: 547px;
-    left: -1px;
-    top: 99px;
-    background: hsl(0, 0%, 100%);
+    overflow: hidden;
+    height: 570px;
+    background: #DFDFDF;
     }
-    
-    #verticaltext{
-    position: absolute;
-    width: 503px;
-    height: 87px;
-    left: 88px;
-    top: 120px;
-    
+ #top span {
+    overflow: hidden;
+    float: left;
+    margin-top: 285px;
+    margin-left: 150px;
+
     font-family: Roboto;
     font-style: normal;
-    font-weight: bold;
-    font-size: 96px;
-    line-height: 112px;
+    font-weight: normal;
+    font-size: 28px;
+    text-align: center;
     
-    color: #FFFFFF;
-    
-    transform: rotate(90deg);
+    color: #000000;
+    }
+
+    #verticaltext{
+        overflow: hidden;
+        transform: rotate(90deg);
+        float: left;
+        margin-left: -200px;
+        margin-top: 210px;
+        font-size: 55px;
+    }
+
+    #verticaltext h2{
+        float: left;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        color:white;
+    }
+
+    #main{
+        background-color: white;
+    }
+
+    #main img{
+        margin-top: 100px;
+        margin-right: 425px;
+        margin-left: 425px;
+        width: 25%;
     }
     
-    #centeredtext{
-    position: absolute;
-    width: 1441px;
-    height: 547px;
-    left: -1px;
-    top: 99px;
-    
-    background: #DFDFDF;
+    #main #getintouch h2{
+        margin-left: 212.5px;
+        margin-top: 100px;
+
+        
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 34px;
+        color:black;
+        
+    }
+
+    #main #getintouch p1{
+        float:left;
+        margin-left: 212.5px;
+        margin-top: 10px;
+
+        
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 26px;
+        color:black;
+    }
+
+    #main #getintouch h2 span{
+        width: 2px;
+        background-color: #DFDFDF;
+        color: #DFDFDF;
+        border: 2px solid #DFDFDF;
+    }
+
+    #main #getintouch h2 span2{
+        width: 2px;
+        background-color: #DFDFDF;
+        color: #DFDFDF;
+        border: 2px solid #DFDFDF;
     }
