--- a/css/BookNow_Page.css
+++ b/css/BookNow_Page.css
@@ -1,13 +1,14 @@
-#top{
+    #top{
     overflow: hidden;
     height: 570px;
     background: #DFDFDF;
     }
- #top span {
+
+    #top span {
     overflow: hidden;
     float: left;
     margin-top: 285px;
-    margin-left: 515px;
+    margin-left: 26%;
 
     font-family: Roboto;
     font-style: normal;
@@ -44,18 +45,22 @@
         margin-left: 755px;
         width: 20%;
     }
+
+    #main #getintouch{
+       border: solid red 2px;
+       width:50%;
+    }
     
-    #main #getintouch h2{
+    #main #getintouch #touch{
         margin-left: 212.5px;
         margin-top: 100px;
-
+        border-left: #DFDFDF 15px solid;
         
         font-family: Roboto;
         font-style: normal;
         font-weight: normal;
         font-size: 34px;
         color:black;
-        
     }
 
     #main #getintouch p1{
@@ -71,24 +76,74 @@
         color:black;
     }
 
-    #main #getintouch h2 span{
-        width: 2px;
-        background-color: #DFDFDF;
-        color: #DFDFDF;
-        border: 2px solid #DFDFDF;
+    .text1 {
+        overflow: hidden;
+        float: left;
+        width: 40%;
+        margin-left: 28%;
+        margin-top: -16%;
+
+        font-size: 25px;
+        
+    
     }
 
-    #main #getintouch h2 span2{
-        width: 2px;
-        background-color: #DFDFDF;
-        color: #DFDFDF;
-        border: 2px solid #DFDFDF;
+    .text1 #fill{
+        font-size: 40px;
+        width: 15%;
     }
 
-    #main #getintouch #list{
+    .number{
+        overflow: hidden;
+        margin-top: 15%;
+        margin-left: 20%;
+        width: 5%;
+
+        height: 3%;
+        font-size: 55px;
+    
+    }
+
+    .number h2 strong{
+        border-bottom: #DFDFDF solid 15px;
+    }
+
+    .instruction2{
+        margin-top: -10%;
+    }
+
+    .instruction3{
+        margin-top: -10%;
+    }
+
+    .quote{
+        float: left;
+        width: 27%;
         
-        margin-left: 212.5px;
-        margin-top: 150px;
-        font-size: 26px;
+        margin-left: 65%;
+        margin-top: -55%;
+
+        background-color: #888888;
+        color: white;
+        border-radius: 14px;
         
+    }
+
+    .quote h4{
+        overflow: hidden;
+        padding-left: 25%;
+        font-size: 36px;
+    }
+
+    .quote span{
+        overflow: hidden;
+        font-size: 30px;
+        padding-left: 3%;
+    }
+    
+    .fo input{
+        overflow: hidden;
+        padding-left: 25%;
+        width: 35%;
+        margin-bottom: 50px;
     }
