--- a/css/BookNow_Page.css
+++ b/css/BookNow_Page.css
@@ -8,7 +8,7 @@
     overflow: hidden;
     float: left;
     margin-top: 285px;
-    margin-left: 26%;
+    margin-left: 40.5%;
 
     font-family: Roboto;
     font-style: normal;
@@ -24,7 +24,7 @@
         transform: rotate(90deg);
         float: left;
         margin-left: -200px;
-        margin-top: 210px;
+        margin-top: 275px;
         font-size: 55px;
     }
 
@@ -47,7 +47,6 @@
     }
 
     #main #getintouch{
-       border: solid red 2px;
        width:50%;
     }
     
@@ -118,32 +117,57 @@
 
     .quote{
         float: left;
-        width: 27%;
-        
-        margin-left: 65%;
-        margin-top: -55%;
+        width: 30%;
+        height: 1150px;
+        margin-left: 60%;
+        margin-top: -57%;
 
         background-color: #888888;
         color: white;
-        border-radius: 14px;
+        border-radius: 7px;
         
     }
 
     .quote h4{
         overflow: hidden;
-        padding-left: 25%;
         font-size: 36px;
+        text-align: center;
     }
 
     .quote span{
         overflow: hidden;
-        font-size: 30px;
-        padding-left: 3%;
+        padding-left: 6.5%;
+        font-size: 28px;
     }
     
     .fo input{
+        margin-top: 11%;
         overflow: hidden;
-        padding-left: 25%;
-        width: 35%;
-        margin-bottom: 50px;
+        width: 75%;
+        height: 45px;
+        border-radius: 7px;
+        margin-left: 13%;
+        
+    }
+
+    #comments{
+        
+        overflow: hidden;
+        height: 185px;
+    }
+
+    #submit{
+        height: 80px;
+        background-color: #9F9F9F;
+        color: white;
+        font-size: 36px;
+    }
+
+    .fo select{
+        overflow: hidden;
+        margin-top: 11%;
+        width: 75%;
+        height: 45px;
+        margin-left: 13%;
+        border-radius: 7px;
     }
