--- a/css/head-and-foot.css
+++ b/css/head-and-foot.css
@@ -8,7 +8,6 @@ body{
 nav {
     overflow:hidden;
     box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
-    border-bottom: 4px solid #ABABAB;
     width:100%;
     position:absolute;
     background:white;
@@ -54,6 +53,7 @@ footer {
     background: #C9C9C9;
     height:100px;
     padding-bottom:20px;
+    clear:both;
 }
 
 /* logo footer */
