--- a/css/BookNow_Page.css
+++ b/css/BookNow_Page.css
@@ -38,19 +38,24 @@
 
     #main{
         background-color: white;
+        padding-bottom: 250px;
+    }
+
+    #booknowlogo{
+        text-align: center;
     }
 
     #main img{
+        margin: 0 auto;
         margin-top: 70px;
-        margin-left: 755px;
-        width: 20%;
+        width: 250px;
     }
 
     #main #getintouch{
        width:50%;
     }
     
-    #main #getintouch #touch{
+     #getintouch #touch{
         margin-left: 212.5px;
         margin-top: 100px;
         border-left: #DFDFDF 15px solid;
@@ -118,13 +123,14 @@
     .quote{
         float: left;
         width: 30%;
-        height: 1150px;
+        height: 1250px;
         margin-left: 60%;
         margin-top: -57%;
+        
 
         background-color: #888888;
         color: white;
-        border-radius: 7px;
+        border-radius: 10px;
         
     }
 
@@ -141,19 +147,22 @@
     }
     
     .fo input{
-        margin-top: 11%;
+        margin-top: 10%;
         overflow: hidden;
         width: 75%;
-        height: 45px;
+        height: 55px;
         border-radius: 7px;
         margin-left: 13%;
         
     }
 
     #comments{
-        
         overflow: hidden;
+        margin-top: 10%;
+        width: 75%;
         height: 185px;
+        border-radius: 7px;
+        margin-left: 13%;
     }
 
     #submit{
@@ -165,9 +174,9 @@
 
     .fo select{
         overflow: hidden;
-        margin-top: 11%;
+        margin-top: 10%;
         width: 75%;
-        height: 45px;
+        height: 55px;
         margin-left: 13%;
         border-radius: 7px;
     }
