--- a/css/BookNow_Page.css
+++ b/css/BookNow_Page.css
@@ -51,7 +51,8 @@
         width: 250px;
     }
 
-    #main #getintouch{
+     #getintouch{
+        margin-left: 7%;
        width:50%;
     }
     
@@ -59,6 +60,7 @@
         margin-left: 212.5px;
         margin-top: 100px;
         border-left: #DFDFDF 15px solid;
+        padding-left: 10px;
         
         font-family: Roboto;
         font-style: normal;
@@ -113,7 +115,7 @@
     }
 
     .instruction2{
-        margin-top: -10%;
+        margin-top: -15%;
     }
 
     .instruction3{
@@ -125,7 +127,7 @@
         width: 30%;
         height: 1250px;
         margin-left: 60%;
-        margin-top: -57%;
+        margin-top: -53%;
         
 
         background-color: #888888;
@@ -153,6 +155,7 @@
         height: 55px;
         border-radius: 7px;
         margin-left: 13%;
+        padding-left: 10px;
         
     }
 
@@ -163,6 +166,7 @@
         height: 185px;
         border-radius: 7px;
         margin-left: 13%;
+        padding-left: 10px;
     }
 
     #submit{
@@ -179,4 +183,5 @@
         height: 55px;
         margin-left: 13%;
         border-radius: 7px;
+        padding-left: 10px;
     }
