--- a/css/head-and-foot.css
+++ b/css/head-and-foot.css
@@ -190,6 +190,7 @@ footer {
     text-align: center;
     color: #000000;
     position:absolute;
+    text-transform:uppercase;
     }
 
 #verticaltext{
