--- a/css/bookNow.css
+++ b/css/bookNow.css
@@ -1,40 +1,3 @@
-    #top{
-    overflow: hidden;
-    height: 570px;
-    background: #DFDFDF;
-    }
-
-    #top span {
-    overflow: hidden;
-    float: left;
-    margin-top: 285px;
-    margin-left: 40.5%;
-
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 28px;
-    text-align: center;
-    
-    color: #000000;
-    }
-
-    #verticaltext{
-        overflow: hidden;
-        transform: rotate(90deg);
-        float: left;
-        margin-left: -200px;
-        margin-top: 275px;
-        font-size: 55px;
-    }
-
-    #verticaltext h2{
-        float: left;
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: bold;
-        color:white;
-    }
 
     #main{
         background-color: white;
@@ -61,23 +24,15 @@
         margin-top: 100px;
         border-left: #DFDFDF 15px solid;
         padding-left: 10px;
-        
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: normal;
+
         font-size: 34px;
         color:black;
     }
 
-    #main #getintouch p1{
+    #main #getintouch p{
         float:left;
         margin-left: 212.5px;
         margin-top: 10px;
-
-        
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: normal;
         font-size: 26px;
         color:black;
     }
@@ -104,7 +59,7 @@
         margin-top: 15%;
         margin-left: 20%;
         width: 5%;
-
+        float:left;
         height: 3%;
         font-size: 55px;
     
