--- a/css/bookNow.css
+++ b/css/bookNow.css
@@ -1,7 +1,7 @@
 
     #main{
         background-color: white;
-        padding-bottom: 375px;
+       
     }
 
     #booknowlogo{
@@ -14,82 +14,68 @@
         width: 250px;
     }
 
-     #getintouch{
-        margin-left: 7%;
-       width:50%;
-    }
-    
-     #getintouch #touch{
-        margin-left: 212.5px;
-        margin-top: 100px;
-        border-left: #DFDFDF 15px solid;
-        padding-left: 10px;
-
-        font-size: 34px;
-        color:black;
-    }
-
-    #main #getintouch p{
-        float:left;
-        margin-left: 212.5px;
-        margin-top: 10px;
-        font-size: 26px;
-        color:black;
-    }
-
-    .text1 {
+    #getintouch{
         overflow: hidden;
+        margin-top: 3%;
+        width:50%;
         float: left;
-        width: 40%;
-        margin-left: 28%;
-        margin-top: -16%;
-
-        font-size: 25px;
-        
+        padding-bottom: 15%;
+    }
     
+    #touch{
+        border-left: #2cb1e5 15px solid;
+        padding-left: 1.5%;
+        margin-left: 25%;
+        font-size: 40px;
+        color:black;
     }
 
-    .text1 #fill{
+    #getintouch p{
+        overflow: hidden;
+        margin-left: 25%;
+        font-size: 25px;
+        color:black;
+    }
+
+    .instruction{
+        padding-top: 5%;
+        margin-left: 25%;
+    }
+
+    .text{
+        width: 80%;
+    }
+
+    .text p{
+        overflow: hidden;
+        font-size: 25px;
+        padding-top: 9%;
+    }
+
+    .steps{
+        overflow: hidden;
         font-size: 40px;
-        width: 15%;
     }
 
     .number{
         overflow: hidden;
-        margin-top: 15%;
-        margin-left: 20%;
-        width: 5%;
-        float:left;
-        height: 3%;
+        float: left;
         font-size: 55px;
-    
     }
 
     .number h2 strong{
-        border-bottom: #DFDFDF solid 15px;
+        border-bottom: #2cb1e5 solid 15px;
     }
-
-    .instruction2{
-        margin-top: -15%;
-    }
-
-    .instruction3{
-        margin-top: -10%;
-    }
-
-
     
     .quote{
+        overflow: hidden;
         float: left;
         width: 30%;
-        height: 1250px;
-        margin-left: 60%;
-        margin-top: -53%;
-        
-
-        background-color: #888888;
+        margin-left: 8%;
+        background-color: #2cb1e5;
         color: white;
         border-radius: 10px;
+        padding-bottom: 5%;
         
     }
 
@@ -106,7 +92,7 @@
     }
     
     .fo input{
-        margin-top: 10%;
+        margin-top: 15%;
         overflow: hidden;
         width: 75%;
         height: 55px;
@@ -118,7 +104,7 @@
 
     #comments{
         overflow: hidden;
-        margin-top: 10%;
+        margin-top: 15%;
         width: 75%;
         height: 185px;
         border-radius: 7px;
@@ -128,14 +114,14 @@
 
     #submit{
         height: 80px;
-        background-color: #9F9F9F;
+        background-color: #249ccc;
         color: white;
         font-size: 36px;
     }
 
     .fo select{
         overflow: hidden;
-        margin-top: 10%;
+        margin-top: 15%;
         width: 75%;
         height: 55px;
         margin-left: 13%;
