--- a/css/head-and-foot.css
+++ b/css/head-and-foot.css
@@ -52,13 +52,17 @@ nav li {
 ul a{
     color:black;
     text-decoration: none;
+    font-family: 'Nunito', sans-serif;
 }
 
 ul a:hover{
-    color: BLUE;
+    color: #2cb1e5;
+    border-bottom: 2px solid #2cb1e5;
 }
 
-
+.fa, .fa-bars{
+    display:none;
+}
 
 /************** FOOTER **************/
 
@@ -126,7 +130,6 @@ footer {
     width:200px;
 }
 
-
 #contactFoot li img{
     width:30px;
     float:left;
@@ -147,8 +150,6 @@ footer {
     text-align:center;
     padding-top:100px;
     background-image: url("../img/bg.jpg");
-
-    
 }
 
 #beginProject button{
@@ -211,4 +212,84 @@ footer {
     margin-top: 0px !important;
     margin-bottom: 0px !important;
     font-family: 'Archivo Black', sans-serif;
+}
+
+
+/***************************  MEDIA QUERY (MQ) ******************************/
+
+/*MEDIA QUERT for BIGGER DESKTOP*/
+@media screen and (min-width:1200px){
+}
+
+/* MQ for DESKTOP*/
+@media screen and (max-width:1200px){
+    #logo{
+        width:150px;
+    }
+
+}
+
+/* MQ for TABLET*/
+@media screen and (max-width:980px){
+    #nav-row{
+        display:none;
+    }
+
+    #logo {
+        margin-top:5px;
+    }
+
+  
+
+    .fa, .fa-bars{
+        display:inherit;
+    }
+
+        /* Style the navigation menu */
+    .topnav {
+        overflow: hidden;
+        position: relative;
+    }
+    
+    /* Hide the links inside the navigation menu (except for logo/home) */
+    .topnav #myLinks {
+        display: none;
+    }
+    
+    /* Style navigation menu links */
+    .topnav a {
+        color:black;
+        padding: 2px 15px;
+        text-decoration: none;
+        font-family: 'Nunito', sans-serif;
+        font-size: 17px;
+        display: block;
+    }
+
+    a #logo:hover {
+        background:white;
+    }
+    
+    /* Style the hamburger menu */
+    .topnav a.icon {
+        display: block;
+        position: absolute;
+        right: 15px;
+        top: 10px;
+    }
+    
+    /* Add a grey background color on mouse-over */
+    .topnav a:hover {
+        background-color: black;
+        color: white;
+    }
+    
+    /* Style the active link (or home/logo) */
+    .active {
+        color: white;
+    }
+}
+
+/* MQ for MOBILE*/
+@media screen and (max-width:480px){
 }
