--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -141,8 +141,9 @@
 }
 
 .value-item h4{
-    font-size:30px;
+    font-size:25px;
     margin-bottom:0;
+    text-transform: uppercase;
 }
 
 .value-item h5{
