--- a/css/head-and-foot.css
+++ b/css/head-and-foot.css
@@ -23,7 +23,7 @@ nav {
     overflow:hidden;
     box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
     width:100%;
-    position:absolute;
+    position:fixed;
     background:white;
     z-index:10000;
 }
@@ -68,10 +68,14 @@ ul a:hover{
 
 footer {
     overflow:hidden;
-    background: #C9C9C9;
+    background:white;
     height:100px;
     padding-bottom:20px;
     clear:both;
+}
+
+footer h4{
+    color: #2cb1e5;
 }
 
 /* logo footer */
@@ -79,7 +83,7 @@ footer {
 #leftFoot{
     width:30%;
     text-align:center;
-    background-color:#3D3D3D;
+    background-color:black;
     float:left;
     height:100px;
     padding-bottom:20px;
@@ -150,6 +154,7 @@ footer {
     text-align:center;
     padding-top:100px;
     background-image: url("../img/bg.jpg");
+    background-size:cover;
 }
 
 #beginProject button{
@@ -309,6 +314,7 @@ footer {
     #connectFoot, #contactFoot{
         width:50%;
         margin:0;
+        border-top:7px solid #2cb1e5;
     }
 
 }/* END od TABLET*/
@@ -318,5 +324,10 @@ footer {
     #connectFoot, #contactFoot{
         width:100%;
         margin-bottom:5%;
+        
+    }
+
+    #contactFoot{
+        border-top: none;
     }
 }
