--- a/css/OurServices.css
+++ b/css/OurServices.css
@@ -24,7 +24,9 @@
     overflow: hidden;
     margin-top: 5%;
     margin-left: 20%;
+    width: 60%;
     font-size: 18px;
+    font-weight: normal;
 }
 
 .left_Presentation_text input{
@@ -64,6 +66,8 @@
 .pres_square p{
     font-weight: normal;
     font-size: 18px;
+    margin: auto;
+    width: 80%;
 }
 
 .pres_square ion-icon{
@@ -72,7 +76,6 @@
     height: 30%;
     margin:auto;
     margin-top: 10%;
-
 }
 
 .additional_service{
@@ -88,9 +91,8 @@
 
 .additional_service h4{
     overflow: hidden;
-    font-size: 24px;
-    margin-top: 5.5%;
-    margin-left: 5%;
+    font-size: 20px;
+    margin-top: 3%;
     float: left;
 
 }
@@ -100,7 +102,8 @@
     float: left;
     font-weight: normal;
     font-size: 18px;
-    margin-top: 5.5%;
+    width: 40%;
+    margin-top: 3%;
     margin-left: 15%;
 
 }
@@ -111,4 +114,130 @@
     margin-left: 5%;
     width: 150px;
     height: 150px;
+}
+
+/***************************  MEDIA QUERY (MQ) ******************************/
+
+/*MEDIA QUERT for BIGGER DESKTOP*/
+@media screen and (min-width:1200px){
+}
+
+/* MQ for DESKTOP*/
+@media screen and (max-width:1200px){
+    .left_Presentation_text input{
+       width: 30%;
+    }
+
+    .additional_service p{
+        width: 30%;
+    }
+}
+
+/* MQ for TABLET*/
+@media screen and (max-width:980px){
+    .left_Presentation_text{
+        float: none;
+        width: 100%;
+        height: auto;
+        padding-bottom: 20%;
+    }
+
+    .left_Presentation_text h3{
+        overflow: hidden;
+        margin-top: 15%;
+        margin-left: 20%;
+    }
+
+    .left_Presentation_text p{
+        margin: auto;
+    }
+
+    .left_Presentation_text input{
+        width: 15%;
+        margin-left: 40%;
+     }
+
+    .right_Presentation_text{
+        width: 100%;
+    }
+
+    .additional_service ion-icon{
+        width: 80px;
+        height: 80px;
+        margin-top: 2%;
+    }
+
+    .additional_service h4{
+        font-size: 18px;
+        
+    }
+
+    .additional_service p{
+        margin-left: 10%;
+        font-size: 16px;
+        width: 40%;
+    }
+    
+}/* END of TABLET*/
+
+/* MQ for MOBILE*/
+@media screen and (max-width:480px){
+
+    .left_Presentation_text h3{
+        font-size: 32px;
+    }
+
+    .left_Presentation_text p{
+        font-size: 18px;
+    }
+
+    .left_Presentation_text input{
+        width: 30%;
+        margin-left: 35%;
+    }
+
+    .right_Presentation_text{
+        height: auto;
+    }
+
+    .pres_square{
+        float: none;
+        height: 350px;
+        width: 100%;
+    }
+
+
+    .pres_square ion-icon{
+        width: 15%;
+        height: 25%;
+    }
+
+    .pres_square h4{
+        font-size: 24px;
+    }
+
+    .pres_square p{
+        font-size: 16px;
+    }
+
+    .in_between{
+        padding-top: 15%;
+        padding-bottom: 15%;
+    }
+
+    .additional_service{
+        width: 80%;
+    }
+
+    .additional_service h4{
+        margin-top: 4%;
+        margin-left: 13%;
+    }
+
+    .additional_service p{
+        width: 100%;
+        margin-left: 3%;
+    }
+
+
 }
