--- a/css/OurServices.css
+++ b/css/OurServices.css
@@ -86,7 +86,7 @@
     margin-top: 10%;
     margin-bottom: 10%;
     padding: 2%;
-    background-color:#189AB4;
+    background-color:#8AC7DB;
 }
 
 .additional_service h4{
