--- a/css/bookNow.css
+++ b/css/bookNow.css
@@ -72,6 +72,7 @@
         float: left;
         width: 30%;
         margin-left: 8%;
+        margin-top: 3%;
         background-color: #2cb1e5;
         color: white;
         border-radius: 10px;
