--- a/css/head-and-foot.css
+++ b/css/head-and-foot.css
@@ -166,7 +166,6 @@ footer h4{
     margin-top:150px;
     text-align:center;
     padding-top:100px;
-    background-image: url("../img/bg.jpg");
     background-size:cover;
 }
 
@@ -209,8 +208,9 @@ footer h4{
     text-align: center;
     position:absolute;
     text-transform:uppercase;
-    color:black;
+    color:white;
     font-family: 'Heebo', sans-serif;
+
     }
 
 #verticaltext{
@@ -237,10 +237,17 @@ footer h4{
 
 /*MEDIA QUERT for BIGGER DESKTOP*/
 @media screen and (min-width:1200px){
+    #beginProject {
+        background-image: url("../img/home-bg/bg.jpg");
+    }
 }
 
 /* MQ for DESKTOP*/
 @media screen and (max-width:1200px){
+    #beginProject {
+        background-image: url("../img/home-bg/bg-l.jpg");
+    }
+
     #logo{
         width:150px;
     }
@@ -249,6 +256,10 @@ footer h4{
 
 /* MQ for TABLET*/
 @media screen and (max-width:980px){
+    #beginProject {
+        background-image: url("../img/home-bg/bg-m.jpg");
+    }
+
     #nav-row{
         display:none;
     }
@@ -334,6 +345,10 @@ footer h4{
 
 /* MQ for MOBILE*/
 @media screen and (max-width:480px){
+    #beginProject {
+        background-image: url("../img/home-bg/bg-s.jpg");
+    }
+
     #connectFoot, #contactFoot{
         width:100%;
         margin-bottom:5%;
